--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -738,7 +738,7 @@
              <item row="4" column="0">
               <widget class="QLabel" name="label_21">
                <property name="text">
-                <string>Default command-&amp;line esacpe mode:</string>
+                <string>Default command-&amp;line escape mode:</string>
                </property>
                <property name="buddy">
                 <cstring>cbMDefaultCommandLineEscapeMode</cstring>
