GUI: prefs: fix spelling mistake

--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -1372,7 +1372,7 @@
              <item row="1" column="0">
               <widget class="QCheckBox" name="cbMDeriveHearingImpairedFlag">
                <property name="text">
-                <string>Derive &quot;&amp;hearing impair&quot; flag for audio/subtitles from file names:</string>
+                <string>Derive &quot;&amp;hearing impaired&quot; flag for audio/subtitles from file names:</string>
                </property>
               </widget>
              </item>
